<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    android:layout_marginTop="12dp">

    <!-- Tombol Kembali ke Home -->
    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_exit_to_app_24"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:backgroundTint="@color/shitpink"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="Back to Home"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Judul Halaman -->
    <TextView
        android:id="@+id/tvTitlePengembalian"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Pengembalian"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btnHome" />

    <!-- Pilih Item/Fasilitas -->
    <Spinner
        android:id="@+id/spinnerPilihFasilitas"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/roundedito"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitlePengembalian"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Nama Peminjam -->
    <TextView
        android:id="@+id/tvNamaPeminjam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:textColorHint="@color/black"
        android:padding="12dp"
        android:background="@drawable/roundedito"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerPilihFasilitas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Tanggal Peminjaman -->
    <TextView
        android:id="@+id/tvTanggalPeminjaman"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_tanggal_peminjaman"
        android:textColorHint="@color/black"
        android:padding="12dp"
        android:background="@drawable/roundedito"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvNamaPeminjam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Tanggal Pengembalian -->
    <TextView
        android:id="@+id/tvTanggalPengembalian"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_tanggal_pengembalian"
        android:textColorHint="@color/black"
        android:padding="12dp"
        android:background="@drawable/roundedito"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvTanggalPeminjaman"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Tombol Pengembalian -->
    <Button
        android:id="@+id/btnKembalikan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/kembali"
        android:backgroundTint="@color/Firefly4"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTanggalPengembalian"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
